--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
 
           <ul class="nav navbar-nav navbar-right navbar-align">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=current_user.email%> <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Chris Boshoff <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="#">Logout</a></li>
                 <li><a href="#">My Profile</a></li>
@@ -82,8 +82,7 @@
       </div>
     </div>
 
-    <div class="container">
-      <%= yield %>
-    </div>
+    <%= yield %>
+
   </body>
 </html>
