--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,28 +16,10 @@
 
 @import "bootstrap";
 
-/*
-.navbar-custom {
-    background-color:#0B5572;
-    color:#ffffff;
-    border-radius:0;
+body {
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
-
-.navbar-custom .navbar-nav > li > a {
-    color:#eeeeee;
-}
-.navbar-custom .navbar-nav > li > a:hover,
-.navbar-custom .navbar-nav > li > a:focus {
-    background-color: #256A86;
-}
-.navbar-custom .navbar-nav > .active > a, 
-.navbar-custom .navbar-nav > .active > a:hover, 
-.navbar-custom .navbar-nav > .active > a:focus {
-    background-color: #256A86;
-}
-.navbar-custom .navbar-brand {
-    color:#eeeeee;
-}*/
 
 .navbar-inverse .navbar-nav > li > a {
     color:#bbbbbb;
