--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,14 +51,6 @@
             </li>
 
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="">Job Cards</a></li>
-                <li><a href="">Completed Service Calls</a></li>
-              </ul>
-            </li>
-
-            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="">Scheduling</a></li>
@@ -69,20 +61,31 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-align">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Chris Boshoff <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Logout</a></li>
-                <li><a href="#">My Profile</a></li>
-              </ul>
-            </li>
+
+            <% if current_user %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><%= link_to "Log out", log_out_path %></li>
+                </ul>
+              </li>
+            <% else %>
+              <li><%= link_to "Sign up", sign_up_path %></li>
+              <li><%= link_to "log in", log_in_path %></li>
+            <% end %>
+
           </ul>
         </div><!--/.nav-collapse -->
 
       </div>
     </div>
+    <div class="container">
+      <% flash.each do |name, msg| %>
+        <br/>
+        <%= content_tag :div, msg, class: "alert alert-#{name}", :role => "alert", :id => "flash_#{name}" %>
+        <% end %>
 
-    <%= yield %>
-
-  </body>
-</html>
+        <%= yield %>
+      </div>
+    </body>
+  </html>
