--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Service</title>
+    <title>Cloud Service</title>
+    <link rel="icon" type="image/jpg" href="/assets/cloud_black.png"/>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
@@ -10,7 +11,6 @@
     <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
-
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -19,6 +19,7 @@
           </button>
           <a class="navbar-brand" href="/?home=1">Sym Program Services</a>                  
         </div>
+        
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-align">
             <li class="dropdown">
@@ -32,7 +33,7 @@
             </li>
 
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Clients <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Client Base <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="">Accounts</a></li>
                 <li><a href="">Contacts</a></li>
@@ -43,10 +44,9 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="">Service Categories</a></li>
-                <li><a href="">Account Regions</a></li>
                 <li class="divider"></li>
-                <li><a href="">Users</a></li>
                 <li><a href="">Mobile Devices</a></li>
+                <li><a href="">Users</a></li>
               </ul>
             </li>
 
@@ -54,8 +54,6 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="">Scheduling</a></li>
-                <li class="divider"></li>
-                <li><a href="">Time Zone</a></li>
               </ul>
             </li>
           </ul>
@@ -71,7 +69,7 @@
               </li>
             <% else %>
               <li><%= link_to "Sign up", sign_up_path %></li>
-              <li><%= link_to "log in", log_in_path %></li>
+              <li><%= link_to "Log in", log_in_path %></li>
             <% end %>
 
           </ul>
@@ -80,12 +78,27 @@
       </div>
     </div>
     <div class="container">
+      <br/>
       <% flash.each do |name, msg| %>
-        <br/>
         <%= content_tag :div, msg, class: "alert alert-#{name}", :role => "alert", :id => "flash_#{name}" %>
         <% end %>
 
         <%= yield %>
       </div>
+    
+    <div class="container">
+      <hr>
+
+      <footer>
+        <p>Cloud Service &copy; <%=Time.now.strftime('%Y')%></p>
+        <a href="" style="padding-right: 3px;">
+          <img src="/assets/24x24_email.png" alt="Email" title="Email me" style="background-color: #3d3d3d"/></a>
+        <a href="" target="_blank" style="padding-right: 3px;">
+          <img src="/assets/24x24_linkedin.png" alt="LinkedIn" title="View my LinkedIn profile" style="background-color: #3d3d3d"/></a>
+        <a href="" target="_blank" style="padding-right: 3px;">
+          <img src="/assets/24x24_facebook.png" alt="Skype" title="Chat on Skype" height="24" style="background-color: #3d3d3d"/></a>
+      </footer>
+
+    </div>
     </body>
   </html>
