--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,29 +1,33 @@
-<h1>Sign Up</h1>
-
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div class="panel panel-danger">
-      <div class="panel-heading"><%= pluralize(@user.errors.count, "error") %> prohibited the sign up of this user:</div>
-
-      <div class="panel-body">
-        <% @user.errors.full_messages.each do |msg| %>
-          <div><%= msg %></div>
-        <% end %>
-      </div>
-    </div>
-  <% end %>
-
-  <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.text_field :email, class: 'form-control' %>
+<div class="panel panel-dark">
+  <div class="panel-heading">
+    <h2 class="panel-title">New User</h2>
   </div>
-  <div class="form-group">
-      <%= f.label :password %><br />
-      <%= f.password_field :password, class: 'form-control' %>
+  <div class="panel-body">
+    <%= form_for @user do |f| %>
+      <% if @user.errors.any? %>
+        <div class="panel panel-danger">
+          <div class="panel-heading"><%= pluralize(@user.errors.count, "error") %> prohibited the sign up of this user:</div>
+
+          <div class="panel-body">
+            <% @user.errors.full_messages.each do |msg| %>
+              <div><%= msg %></div>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+
+      <div class="form-group">
+        <%= f.label :email %><br />
+        <%= f.text_field :email, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password %><br />
+          <%= f.password_field :password, class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, class: 'form-control' %>
+            </div>
+            <%= f.submit "Sign up", class: 'btn btn-primary' %>
+            <% end %>
   </div>
-  <div class="form-group">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
-  </div>
-  <%= f.submit "Sign up", class: 'btn btn-primary' %>
-<% end %>
