--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <img src="/assets/cloud_white.png" width="30">
     <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -17,7 +18,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/?home=1">Sym Program Services</a>                  
+          
+          <a class="navbar-brand" href="/?home=1"><img src="/assets/cloud_white.png" width="23">&nbsp;&nbsp; Sym Program Services</a>                  
         </div>
         
         <div class="collapse navbar-collapse">
@@ -78,7 +80,6 @@
       </div>
     </div>
     <div class="container">
-      <br/>
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, class: "alert alert-#{name}", :role => "alert", :id => "flash_#{name}" %>
         <% end %>
