--- a/app/views/organisations/new.html.erb
+++ b/app/views/organisations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h4>Sign up your organisation with Cloud Service</h4>
   <p>The best mobile service solution for your organisation.</p>
-
+<%= params.inspect %>
   <hr/>
 
   <%= form_for @organisation do |f| %>
@@ -21,19 +21,19 @@
       <%= f.label :name, "Organisation Name" %><br />
       <%= f.text_field :name, class: 'form-control' %>
       </div>
-      <%= f.fields_for @organisation.user do |f| %>
+      <%= f.fields_for :user, @organisation.build_user do |u| %>
         <div class="form-group">
-          <%= f.label :email %><br />
-          <%= f.text_field :email, class: 'form-control' %>
+          <%= u.label :email %><br />
+          <%= u.text_field :email, class: 'form-control' %>
           </div>
 
           <div class="form-group">
-            <%= f.label :password %><br />
-            <%= f.password_field :password, class: 'form-control' %>
+            <%= u.label :password %><br />
+            <%= u.password_field :password, class: 'form-control' %>
             </div>
             <div class="form-group">
-              <%= f.label :password_confirmation %><br />
-              <%= f.password_field :password_confirmation, class: 'form-control' %>
+              <%= u.label :password_confirmation %><br />
+              <%= u.password_field :password_confirmation, class: 'form-control' %>
               </div>
             <% end %>
 
