--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
           </button>
           
-          <a class="navbar-brand" href="/?home=1"><img src="/assets/cloud_white.png" width="23">&nbsp;&nbsp; Sym Program Services</a>                  
+          <a class="navbar-brand" href="/?home=1"><img src="/assets/cloud_white.png" width="23">&nbsp;&nbsp; <%= current_user ? current_user.organisation.name : 'Cloud Service' %></a>                  
         </div>
         
         <div class="collapse navbar-collapse">
@@ -64,7 +64,7 @@
 
             <% if current_user %>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name+' '+current_user.surname %> <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                   <li><%= link_to "Log out", log_out_path %></li>
                 </ul>
