--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,7 +19,15 @@
 
     <div class="form-group">
       <%= f.label :email %><br />
-      <%= f.text_field :email, class: 'form-control' %>
+      <%= f.email_field :email, class: 'form-control' %>
+      </div>
+<div class="form-group">
+      <%= f.label :name %><br />
+      <%= f.text_field :name, class: 'form-control' %>
+      </div>
+<div class="form-group">
+      <%= f.label :surname %><br />
+      <%= f.text_field :surname, class: 'form-control' %>
       </div>
 
       <div class="form-group">
