--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
 
       </div>
     </div>
-    <br/>
+    <div style="margin-top: 10px;"></div>
     <div class="container">
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, class: "alert alert-#{name}", :role => "alert", :id => "flash_#{name}" %>
