--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
                 <li><a href="">Service Categories</a></li>
                 <li class="divider"></li>
                 <li><a href="">Mobile Devices</a></li>
-                <li><a href="">Users</a></li>
+                <li><a href="/users">Users</a></li>
               </ul>
             </li>
 
@@ -88,19 +88,5 @@
     
     <%= yield %>
     
-    <div class="container">
-      <hr>
-
-      <footer>
-        <p>Cloud Service &copy; <%=Time.now.strftime('%Y')%></p>
-        <a href="" style="padding-right: 3px;">
-          <img src="/assets/24x24_email.png" alt="Email" title="Email me" style="background-color: #3d3d3d"/></a>
-        <a href="" target="_blank" style="padding-right: 3px;">
-          <img src="/assets/24x24_linkedin.png" alt="LinkedIn" title="View my LinkedIn profile" style="background-color: #3d3d3d"/></a>
-        <a href="" target="_blank" style="padding-right: 3px;">
-          <img src="/assets/24x24_facebook.png" alt="Skype" title="Chat on Skype" height="24" style="background-color: #3d3d3d"/></a>
-      </footer>
-
-    </div>
     </body>
   </html>
