--- a/app/views/organisations/new.html.erb
+++ b/app/views/organisations/new.html.erb
@@ -27,9 +27,9 @@
             <div class="form-group">
               <%= u.label :email %><br />
               <div class="input-group">
-              <div class="input-group-addon">@</div>             
-              <%= u.email_field :email, class: 'form-control' %>
-              </div>
+                <div class="input-group-addon">@</div>             
+                <%= u.email_field :email, class: 'form-control' %>
+                </div>
               </div>
               <div class="form-group">
                 <%= u.label :name %><br />
@@ -56,23 +56,24 @@
                   </div>
                   <div class="col-md-4 hidden-sm hidden-xs" style="background-color: #F9F9F9;">
                     <br/>
-                    <div align='center'><img src='/assets/cloud_black.png' width='100'></div>
+                    <div align='center'><img src='/assets/cloud_black.png' width='80'></div>
                     <p align="center" style='margin-top: -15px;'><strong>Cloud Service</strong></p>
                     <hr/>
                     <p align="center"><strong>Join the most intelligent Service Solution</strong></p>
                     <ul>
-                    <li>With our intelligent location based mapping you can start using the system today without having to import your entire client base first.</li>
-                    <p></p>
-                    <li>Use the power of your mobile device to take on or validate the name or location of your clients.</li>
-                    <p></p>
-                    <li>The system learns as you use it to eliminate duplication of work and speed up productivity.</li>
+                      <li>With our intelligent location based mapping you can start using the system today without having to import your entire client base first.</li>
+                      <p></p>
+                      <li>Use the power of your mobile device to take on or validate the name or location of your clients.</li>
+                      <p></p>
+                      <li>The system learns as you use it to eliminate duplication of work and speed up productivity.</li>
                     </ul>
                     <hr/>
-                     <p align="center"><strong>Remember, it's free!</strong></p>
-                     <p align="center"><strong>Yes, mahala!</strong></p>
-                     <br/>
-                     <br/>
+                    <p align="center"><strong>Remember, it's free!</strong></p>
+                    <p align="center"><strong>Yes, mahala!</strong></p>
+                    <br/>
+                    <br/>
                   </div>
 
                 </div>
+                <%=render "layouts/footer"%>
               </div>
