--- a/app/views/organisations/new.html.erb
+++ b/app/views/organisations/new.html.erb
@@ -32,13 +32,9 @@
                 </div>
               </div>
               <div class="form-group">
-                <%= u.label :name %><br />
+                <%= u.label :name, "Full Name" %><br />
                 <%= u.text_field :name, class: 'form-control' %>
                 </div>
-                <div class="form-group">
-                  <%= u.label :surname %><br />
-                  <%= u.text_field :surname, class: 'form-control' %>
-                  </div>
                   <div class="form-group">
                     <%= u.label :password %><br />
                     <%= u.password_field :password, class: 'form-control' %>
