--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,47 +1,43 @@
 <div class="container">
-  <h4>Create a new user in your organisation</h4>
-  <p>Each user will have their own username and password to log into the system. Any user can log into the mobile app.</p>
+    <h4>Create a new user in your organisation</h4>
+    <p>Each user will have their own username and password to log into the system. Any user can log into the mobile app.</p>
 
-<hr/>
+    <hr/>
 
-  <%= form_for @user do |f| %>
-    <% if @user.errors.any? %>
-      <div class="panel panel-danger">
-        <div class="panel-heading"><%= pluralize(@user.errors.count, "error") %> prohibited the sign up of this user:</div>
+    <%= form_for @user do |f| %>
+      <% if @user.errors.any? %>
+        <div class="panel panel-danger">
+            <div class="panel-heading"><%= pluralize(@user.errors.count, "error") %> prohibited the sign up of this user:</div>
 
-        <div class="panel-body">
-          <% @user.errors.full_messages.each do |msg| %>
-            <div><%= msg %></div>
-          <% end %>
+            <div class="panel-body">
+                <% @user.errors.full_messages.each do |msg| %>
+                  <div><%= msg %></div>
+                <% end %>
+            </div>
         </div>
-      </div>
-    <% end %>
-
-    <div class="form-group">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, class: 'form-control' %>
-      </div>
-<div class="form-group">
-      <%= f.label :name %><br />
-      <%= f.text_field :name, class: 'form-control' %>
-      </div>
-<div class="form-group">
-      <%= f.label :surname %><br />
-      <%= f.text_field :surname, class: 'form-control' %>
-      </div>
+      <% end %>
 
       <div class="form-group">
-        <%= f.label :password %><br />
-        <%= f.password_field :password, class: 'form-control' %>
+          <%= f.label :email %><br />
+          <%= f.email_field :email, class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, class: 'form-control' %>
+            <%= f.label :name, "Full Name" %><br />
+            <%= f.text_field :name, class: 'form-control' %>
           </div>
-          <%= f.submit "Sign up", class: 'btn btn-primary' %>
+
+          <div class="form-group">
+              <%= f.label :password %><br />
+              <%= f.password_field :password, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+                <%= f.label :password_confirmation %><br />
+                <%= f.password_field :password_confirmation, class: 'form-control' %>
+              </div>
+              <%= f.submit "Sign up", class: 'btn btn-primary' %>
 
 
-          <% end %>
-<%=render "layouts/footer"%>
-        </div>
+              <% end %>
+              <%=render "layouts/footer"%>
+          </div>
 
