--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,7 +16,7 @@
             </div>
         </div>
       <% end %>
-
+      
       <div class="form-group">
           <%= f.label :email %><br />
           <%= f.email_field :email, class: 'form-control' %>
@@ -34,6 +34,9 @@
                 <%= f.label :password_confirmation %><br />
                 <%= f.password_field :password_confirmation, class: 'form-control' %>
               </div>
+    <%= f.fields_for :organisation do |o| %>
+        <%=o.hidden_field :id, value: current_user.organisation.id%>
+      <% end%>
               <%= f.submit "Sign up", class: 'btn btn-primary' %>
 
 
